Fixing branding out of div on mobile deivces

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -92,10 +92,6 @@ div.pokedex {
     width: 4rem;
 }
 
-.branding {
-    max-width: 30rem;
-}
-
 .poketrader-header {
     background-color: #2CDAB1;
     border-bottom-left-radius: 30px;
